--- a/Retriever/Properties/Resources.resx
+++ b/Retriever/Properties/Resources.resx
@@ -169,4 +169,10 @@
   <data name="SmallerDog" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\47231-smaller.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Korra" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\korra.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="RoundKorra" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\korra_circle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
